--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         </header>
     <div class="top-wrapper">
       <div class="container">
-        <h1>Makan Di Beatbox</h1>
+        <h1>Jajan Di Beatbox</h1>
         <h1>Perut Kenyang Hatipun Senang.</h1>
-        <p>Progate is a web service where you can learn programming online.</p>
-        <p>We offer you a fully equipped coding environment to get you started.</p>
+        <p>Beatbox adalah usaha yang dibangun oleh anak millenial untuk membalikkan mood kalian.</p>
+        <p>Usaha ini telah berjalan selama 5tahun dan telah mendapatkan banyak penghargaan.</p>
         <div class="btn-wrapper">
           <a href="#" class="btn signup">Sign up with Email</a>
           <p>or</p>
@@ -46,7 +46,7 @@
     <div class="lesson-wrapper">
       <div class="container">
         <div class="heading">
-          <h2>Learn Where to Get Started!</h2>
+          <h2>Menu Bestseller</h2>
         </div>
         <div class="lessons">
           <div class="lesson">
@@ -84,10 +84,10 @@
     <div class="message-wrapper">
       <div class="container">
         <div class="heading">
-          <h2>Ready to become an awesome programmer?</h2>
-          <h3>Let's learn to code, learn to be creative!</h3>
+          <h2>Perut anda sudah lapar?</h2>
+          <h3>Sudah taukan jawabannya kan? Cussss diborong</h3>
         </div>
-        <span class="btn message">Start Learning</span>
+        <span class="btn message">Happy Shopping</span>
       </div>
     </div>
     <footer>
