--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         </div>
         <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
-          <a href="#">Lessons</a>
-          <a href="#">Sign in</a>
-          <a href="#" class="login">Log in</a>
+          <a href="#">Daftar harga</a>
+          <a href="#">Produk kami</a>
+          <a href="#" class="login">Kunjungi kami</a>
         </div>
       </div>
         </header>
@@ -33,13 +33,13 @@
       <div class="container">
         <h1>Jajan Di Beatbox</h1>
         <h1>Perut Kenyang Hatipun Senang.</h1>
-        <p>Beatbox adalah usaha yang dibangun oleh anak millenial untuk membalikkan mood kalian.</p>
+        <p>Beatbox adalah usaha yang dibangun oleh anak millenial untuk mengembalikkan mood kalian.</p>
         <p>Usaha ini telah berjalan selama 5tahun dan telah mendapatkan banyak penghargaan.</p>
         <div class="btn-wrapper">
-          <a href="#" class="btn signup">Sign up with Email</a>
+          <a href="#" class="btn signup">Whatsapp</a>
           <p>or</p>
-          <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Sign up with Facebook</a>
-          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Sign up with Twitter</a>
+          <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Jajan di Facebook</a>
+          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Jajan di Twitter</a>
         </div>
       </div>
     </div>
@@ -93,7 +93,7 @@
     <footer>
       <div class="container">
         <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-        <p>Learn to code, learn to be creative.</p>
+        <p>Ada uang,Kamu pasti kenyang.</p>
       </div>
     </footer>
   </body>
