--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="container">
         <div class="heading">
           <h2>Perut anda sudah lapar?</h2>
-          <h3>Sudah taukan jawabannya kan? Cussss diborong</h3>
+          <h3>Sudah tau jawabannya kan? Cussss diborong</h3>
         </div>
         <span class="btn message">Happy Shopping</span>
       </div>
