--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+          <img class="logo" src="https://drive.google.com/file/d/1Z70FSI-iERY9rvc1I2txuIeo_zx-T9li/view?usp=sharing">
         </div>
         <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
