--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <a href="#" class="btn signup">Whatsapp</a>
           <p>or</p>
           <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Jajan di Facebook</a>
-          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Jajan di Twitter</a>
+          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Rating Beatbox on Twitter</a>
         </div>
       </div>
     </div>
