--- a/index.html
+++ b/index.html
@@ -52,30 +52,30 @@
           <div class="lesson">
             <div class="lesson-icon">
               <img src="https://prog-8.com/images/html/advanced/html.png">
-              <p>HTML & CSS</p>
+              <p>Paket Sultan</p>
             </div>
-            <p class="text-contents">Languages used to build and design the appearances of your websites. HTML adds the structure, and CSS styles it.</p>
+            <p class="text-contents">Terdiri dari 2hamburger,kentang goreng dan juga coca cola yang membuat kalian bahagia</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-              <p>jQuery</p>
+              <p>Paket Kaya</p>
             </div>
-            <p class="text-contents">A fast, feature-rich and easy-to-use JavaScript library that handles animations and Ajax requests.</p>
+            <p class="text-contents">Terdiri dari 1hamburger,kentang goreng dan juga coca cola ahhhh nikmat</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="https://prog-8.com/images/html/advanced/ruby.png">
-              <p>Ruby</p>
+              <p>Paket gajian</p>
             </div>
-            <p class="text-contents">A dynamic, general-purpose language that is simple and productive. It is commonly used around the world to build web applications.</p>
+            <p class="text-contents">Terdiri dari 1hamburger dan kentang goreng,kenyang diperut seret di tenggorokan</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="https://prog-8.com/images/html/advanced/php.png">
-              <p>PHP</p>
+              <p>Paket akhir bulan</p>
             </div>
-            <p class="text-contents">An open source scripting language that can be embedded into HTML, and well suited for web development.</p>
+            <p class="text-contents">Terdiri dari 1hamburger tanpa minum yang akan membuat anda seret</p>
           </div>
           <div class="clear"></div>
         </div>
@@ -87,7 +87,7 @@
           <h2>Perut anda sudah lapar?</h2>
           <h3>Sudah tau jawabannya kan? Cussss diborong</h3>
         </div>
-        <span class="btn message">Happy Shopping</span>
+        <span class="btn message">Pesan Sekarang!</span>
       </div>
     </div>
     <footer>
