--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+          <img class="logo" src="blob:https://web.whatsapp.com/c878ec83-376e-4164-88d4-a2504b0d6c00">
         </div>
         <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
