--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </div>
     <footer>
       <div class="container">
-        <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
+        <img src="blob:https://web.whatsapp.com/c878ec83-376e-4164-88d4-a2504b0d6c00">
         <p>Ada uang,Kamu pasti kenyang.</p>
       </div>
     </footer>
