--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/html.png">
+              <img src="blob:https://web.whatsapp.com/acb28cd1-7750-4536-90b9-8fca282b597d">
               <p>Paket Sultan</p>
             </div>
             <p class="text-contents">Terdiri dari 2hamburger,kentang goreng dan juga coca cola yang membuat kalian bahagia</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/jQuery.png">
+              <img src="blob:https://web.whatsapp.com/9ecac663-3387-40d1-909f-e3ea3e8c3b68">
               <p>Paket Kaya</p>
             </div>
             <p class="text-contents">Terdiri dari 1hamburger,kentang goreng dan juga coca cola ahhhh nikmat</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/ruby.png">
+              <img src="blob:https://web.whatsapp.com/84736a83-f196-4e6f-9366-f2be3efdd573">
               <p>Paket gajian</p>
             </div>
             <p class="text-contents">Terdiri dari 1hamburger dan kentang goreng,kenyang diperut seret di tenggorokan</p>
