--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="blob:https://web.whatsapp.com/9ecac663-3387-40d1-909f-e3ea3e8c3b68">
+              <img src="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-02%20at%2005.31.12.jpeg">
               <p>Paket Kaya</p>
             </div>
             <p class="text-contents">Terdiri dari 1hamburger,kentang goreng dan juga coca cola ahhhh nikmat</p>
