--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="blob:https://web.whatsapp.com/4554f9e8-86a9-4448-869d-1fe3b174ef48">
+          <img class="logo" src="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-02%20at%2005.10.42.jpeg">
         </div>
         <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
