--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </div>
     <footer>
       <div class="container">
-        <img src="blob:https://web.whatsapp.com/7caa28d4-c657-46ce-9c72-1867fca7fa90">
+        <img src="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-02%20at%2005.25.14.jpeg">
         <p>Ada uang,Kamu pasti kenyang.</p>
       </div>
     </footer>
