--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="blob:https://web.whatsapp.com/acb28cd1-7750-4536-90b9-8fca282b597d">
+              <img src="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-02%20at%2005.30.51.jpeg">
               <p>Paket Sultan</p>
             </div>
             <p class="text-contents">Terdiri dari 2hamburger,kentang goreng dan juga coca cola yang membuat kalian bahagia</p>
@@ -72,10 +72,10 @@
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/php.png">
-              <p>Paket akhir bulan</p>
+              <img src="">
+              <p></p>
             </div>
-            <p class="text-contents">Terdiri dari 1hamburger tanpa minum yang akan membuat anda seret</p>
+            <p class="text-contents"></p>
           </div>
           <div class="clear"></div>
         </div>
