--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="blob:https://web.whatsapp.com/84736a83-f196-4e6f-9366-f2be3efdd573">
+              <img src="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-02%20at%2005.31.36.jpeg">
               <p>Paket gajian</p>
             </div>
             <p class="text-contents">Terdiri dari 1hamburger dan kentang goreng,kenyang diperut seret di tenggorokan</p>
