--- a/index.html
+++ b/index.html
@@ -52,30 +52,30 @@
           <div class="lesson">
             <div class="lesson-icon">
               <img src="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-02%20at%2005.30.51.jpeg">
-              <p>Paket Sultan</p>
+              <p></p>
             </div>
-            <p class="text-contents">Terdiri dari 2hamburger,kentang goreng dan juga coca cola yang membuat kalian bahagia</p>
+            <p class="text-contents">Terdiri dari 2Kebab,hamburger,onion ring dan juga coca-cola,kenyang diperut gurih dimulut</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-02%20at%2005.31.12.jpeg">
-              <p>Paket Kaya</p>
+              <img src="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-02%20at%2005.31.12%20(1).jpeg">
+              <p></p>
             </div>
-            <p class="text-contents">Terdiri dari 1hamburger,kentang goreng dan juga coca cola ahhhh nikmat</p>
+            <p class="text-contents">Terdiri dari 1hamburger dengan lapisan keju yang lumer dimulut dan daging ayam yang diimpor langsung dari California</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-02%20at%2005.31.36.jpeg">
-              <p>Paket gajian</p>
+              <p></p>
             </div>
-            <p class="text-contents">Terdiri dari 1hamburger dan kentang goreng,kenyang diperut seret di tenggorokan</p>
+            <p class="text-contents">Minuman spesial yang terinspirasi dari film Despicable me yang membuat tenggorokan basah 7hari 7malam</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="">
+              <img src="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-02%20at%2005.30.51.jpeg">
               <p></p>
             </div>
-            <p class="text-contents"></p>
+            <p class="text-contents">Terdiri dari 2Kebab,hamburger,onion ring dan juga coca-cola,kenyang diperut gurih dimulut</p>
           </div>
           <div class="clear"></div>
         </div>
