--- a/index.html
+++ b/index.html
@@ -8,12 +8,6 @@
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="stylesheet" type="text/css" href="responsive.css">
   <link rel="shortcut icon" href="favicon.ico" >
-  <!--     ┬ ┬┌─┐  ┌─┐┬─┐┌─┐        -->
-  <!--     │││├┤   ├─┤├┬┘├┤         -->
-  <!--     └┴┘└─┘  ┴ ┴┴└─└─┘        -->
-  <!--     ╔═╗╦═╗╔═╗╔═╗╔═╗╔╦╗╔═╗    -->
-  <!--     ╠═╝╠╦╝║ ║║ ╦╠═╣ ║ ║╣     -->
-  <!--     ╩  ╩╚═╚═╝╚═╝╩ ╩ ╩ ╚═╝    -->
 </head>
 <body>
     <header>
@@ -36,10 +30,11 @@
         <p>Beatbox adalah usaha yang dibangun oleh anak millenial untuk mengembalikkan mood kalian.</p>
         <p>Usaha ini telah berjalan selama 5tahun dan telah mendapatkan banyak penghargaan.</p>
         <div class="btn-wrapper">
-          <a href="#" class="btn signup">Whatsapp</a>
+          <a href="https://bit.ly/3AT9Jiy" class="btn whatsapp"><span class="fa fa-whatsapp"></span>Whatsapp</a>
           <p>or</p>
-          <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Jajan di Facebook</a>
-          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Rating Beatbox on Twitter</a>
+          <a href="https://bit.ly/34xMP48" class="btn facebook"><span class="fa fa-facebook"></span>Jajan di Facebook</a>
+          <a href="https://bit.ly/3IQgXH4" class="btn twitter"><span class="fa fa-twitter"></span>Rating Beatbox on Twitter</a>
+          <a href="https://www.instagram.com/gilardiii_/" class="btn instagram"><span class="fa fa-instagram"></span>Kunjungi instagram saya</a>
         </div>
       </div>
     </div>
