--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
     <footer>
       <div class="container">
-        <img src="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-02%20at%2005.25.14.jpeg">
+        <img src="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/1643852119869.png">
         <p>Ada uang,Kamu pasti kenyang.</p>
       </div>
     </footer>
