--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-02%20at%2005.10.42.jpeg">
+          <img class="logo" src="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/1643852987656.png">
         </div>
         <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
