--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </div>
         <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
-          <a href="#">Daftar harga</a>
-          <a href="#">Produk kami</a>
-          <a href="#" class="login">Kunjungi kami</a>
+          <a href="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-03%20at%2012.08.52.jpeg">Daftar harga</a>
+          <a href="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-03%20at%2012.08.52.jpeg">Produk kami</a>
+          <a href="https://bit.ly/3IQgXH4" class="login">Kunjungi kami</a>
         </div>
       </div>
         </header>
