--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         <div class="header-right">
           <a href="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-03%20at%2012.08.52.jpeg">Daftar harga</a>
           <a href="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-03%20at%2012.08.52.jpeg">Produk kami</a>
-          <a href="https://bit.ly/3IQgXH4" class="login">Kunjungi kami</a>
+          <a href="https://bit.ly/3IQgXH4" class="login">Tentang kami</a>
         </div>
       </div>
         </header>
     <div class="top-wrapper">
       <div class="container">
-        <h1>Jajan Di Beatbox</h1>
-        <h1>Perut Kenyang Hatipun Senang.</h1>
-        <p>Beatbox adalah usaha yang dibangun oleh anak millenial untuk mengembalikkan mood kalian.</p>
-        <p>Usaha ini telah berjalan selama 5tahun dan telah mendapatkan banyak penghargaan.</p>
+        <h1>Beatbox Kitchen</h1>
+        <h1>Since 2017</h1>
+        <p></p>
+        <p></p>
         <div class="btn-wrapper">
           <a href="https://bit.ly/3AT9Jiy" class="btn whatsapp"><span class="fa fa-whatsapp"></span>Whatsapp</a>
           <p>or</p>
@@ -41,7 +41,7 @@
     <div class="lesson-wrapper">
       <div class="container">
         <div class="heading">
-          <h2>Menu Bestseller</h2>
+          <h2>Coming Soon</h2>
         </div>
         <div class="lessons">
           <div class="lesson">
