--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
             </div>
             <p class="text-contents">Terdiri dari 2Kebab,hamburger,onion ring dan juga coca-cola,kenyang diperut gurih dimulut</p>
           </div>
+            <div class="lesson">
+              <div class="lesson-icon">
+                <img src="">
+                <p></p>
+              </div>
+            <p class="text-contents">Outlet yang terletak diseluruh JABODETABEK dan yang pasti instagramable
+          </div>
           <div class="clear"></div>
         </div>
       </div>
