--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </div>
             <div class="lesson">
               <div class="lesson-icon">
-                <img src="">
+                <img src="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-04%20at%2000.04.28.jpeg">
                 <p></p>
               </div>
             <p class="text-contents">Outlet yang terletak diseluruh JABODETABEK dan yang pasti instagramable
