--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
             </div>
             <p class="text-contents">Terdiri dari 2Kebab,hamburger,onion ring dan juga coca-cola,kenyang diperut gurih dimulut</p>
           </div>
+           <div class="lesson-wrapper">
+      <div class="container">
+        <div class="heading">
+          <h2>Outlet</h2>
+        </div>
             <div class="lesson">
               <div class="lesson-icon">
                 <img src="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-04%20at%2000.04.28.jpeg">
