--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
            <div class="lesson-wrapper">
       <div class="container">
         <div class="heading">
-          <h2>Outlet</h2>
+          <h2>Cabang Outlet</h2>
         </div>
             <div class="lesson">
               <div class="lesson-icon">
