--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
             </div>
             <p class="text-contents">Terdiri dari 2Kebab,hamburger,onion ring dan juga coca-cola,kenyang diperut gurih dimulut</p>
           </div>
-           <div class="lesson-wrapperr">
-      <div class="containerr">
-        <div class="headingg">
+           <div class="lesson-wrapper">
+      <div class="container">
+        <div class="heading">
           <h2>Cabang Outlet</h2>
         </div>
             <div class="lesson">
