--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
            <div class="lesson-wrapper">
       <div class="container">
         <div class="heading">
+          <div class="clear"></div>
           <h2>Cabang Outlet</h2>
         </div>
             <div class="lesson">
@@ -82,7 +83,9 @@
                 <img src="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-04%20at%2000.04.28.jpeg">
                 <p></p>
               </div>
-            <p class="text-contents">Outlet yang terletak diseluruh JABODETABEK dan yang pasti instagramable
+              <div class="clear"<div></div>
+              <div style="text-align: center;"></div>
+            <p class="text-contents2">Outlet yang terletak diseluruh JABODETABEK dan yang pasti instagramable
           </div>
           <div class="clear"></div>
         </div>
