--- a/index.html
+++ b/index.html
@@ -78,19 +78,13 @@
           <div class="clear"></div>
           <h2>Cabang Outlet</h2>
         </div>
-            <div class="lesson">
-              <div class="lesson-icon">
+            <div class="lesson2">
+              <div class="lesson-icon2">
                 <img src="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-05%20at%2001.40.21.jpeg">
+                <p class="text-contents">Salah satu cabang outlet terbaik adalah Bojongsari,Depok dan yang pasti INSTAGRAMABLE bingitsss</p>
                 <p></p>
               </div>
-              <div class="clear"<div></div>
-              <div style="text-align: center;"></div>
-            <p class="text-contents2">Outlet yang terletak diseluruh JABODETABEK dan yang pasti instagramable
-          </div>
           <div class="clear"></div>
-        </div>
-      </div>
-    </div>
     <div class="message-wrapper">
       <div class="container">
         <div class="heading">
@@ -103,7 +97,7 @@
     <footer>
       <div class="container">
         <img src="https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/1643852119869.png">
-        <p>Ada uang,Kamu pasti kenyang.</p>
+        <p>Lapar?di BEATBOXin aja</p>
       </div>
     </footer>
   </body>
